Modified - Testing successfu

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Python Sample App</title>
+    <title>Python Sample Container App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -18,7 +18,7 @@
 
 <body>
     <div class="main">
-        <h1>Welcome to this website</h1>
+        <h1>This is a sample containerized Python app</h1>
         {% block content %}{% endblock %}
 </body>
 
